@@ -31,10 +31,9 @@ import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.TreeSet;
-import java.util.stream.Collectors;
 import jenkins.util.MemoryReductionUtil;
 import org.apache.commons.io.IOUtils;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.For;
 
 /**
@@ -42,12 +41,12 @@ import org.jvnet.hudson.test.For;
  * More tests are available in the {@code test} module.
  */
 @For(ClassFilterImpl.class)
-public class ClassFilterImplSanityTest {
+class ClassFilterImplSanityTest {
 
     @Test
-    public void whitelistSanity() throws Exception {
+    void whitelistSanity() throws Exception {
         try (InputStream is = ClassFilterImpl.class.getResourceAsStream("whitelisted-classes.txt")) {
-            List<String> lines = IOUtils.readLines(is, StandardCharsets.UTF_8).stream().filter(line -> !line.matches("#.*|\\s*")).collect(Collectors.toList());
+            List<String> lines = IOUtils.readLines(is, StandardCharsets.UTF_8).stream().filter(line -> !line.matches("#.*|\\s*")).toList();
             assertThat("whitelist is NOT ordered", new TreeSet<>(lines), contains(lines.toArray(MemoryReductionUtil.EMPTY_STRING_ARRAY)));
             for (String line : lines) {
                 try {
